Make the system tab show correct data
